test/conformance/chainsaw/validate/clusterpolicy/standard/variables/lazyload/conditions-deprecated/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: other
spec:
  containers:
  - image: ghcr.io/kyverno/test-verify-image:unsigned
    name: test
