test/conformance/chainsaw/validate/clusterpolicy/standard/variables/lazyload/conditions-deprecated/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: conditions
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: preconditions
  - name: step-02
    try:
    - apply:
        file: pod-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: pod-bad.yaml
  - name: step-03
    try:
    - delete:
        ref:
          apiVersion: v1
          kind: Pod
          name: test
        timeout: 1m0s
    - apply:
        file: policy-2.yaml
  - name: step-04
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: pod-good.yaml
    - apply:
        file: pod-bad.yaml
